docs: add auth for swagger
